# Nepali-Instruction-LLM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: model.yaml
scripts/: check_environment.py  check_model.py  config.py  download_model.py  load_model.py  test_gpu.py
src/config/: loader.py  paths.py
src/llm/: load_model.py
