[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nepali-instruction-llm"
version = "0.1.0"
description = "Instruction-tuned Nepali LLM using QLoRA and Hugging Face Transformers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sambat Sen Oli" }
]
keywords = [
    "llm",
    "qlora",
    "huggingface",
    "nepali",
    "instruction-tuning",
    "pytorch"
]